--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <div class="content-grid">
     <div class="section-card">
       <div class="stream-container">
-        <iframe src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com&parent=www.skimmynz.com" allowfullscreen></iframe>
+        <iframe src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com&parent=www.skimmynz.com&autoplay=true&muted=true" allowfullscreen></iframe>
       </div>
     </div>
     <div class="section-card">
