--- a/123.html
+++ b/123.html
@@ -24,7 +24,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Wowhead Tooltips -->
-  <script>window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };</script>
+  <script>window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: false };</script>
   <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
 
   <!-- Ads -->
@@ -132,52 +132,6 @@
     <div class="scroll-hint" aria-hidden="true">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg>
       Scroll
-    </div>
-  </section>
-
-  <!-- ════════════════════════════════════════════════════
-       Zone 2 — Quick-Access Tool Cards
-       ════════════════════════════════════════════════════ -->
-  <section class="home-section">
-    <h2 class="section-title">Tools</h2>
-    <div class="tools-grid">
-
-      <!-- Rankings -->
-      <a href="/rankings.html" class="tool-card">
-        <div class="tool-icon">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="17 11 19 13 23 9"/><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/></svg>
-        </div>
-        <div class="tool-body">
-          <div class="tool-name">Rankings</div>
-          <div class="tool-desc">Top 100 Shadow Priest DPS parses per boss with talent &amp; gear breakdowns</div>
-          <div class="tool-go">Explore <span>&rarr;</span></div>
-        </div>
-      </a>
-
-      <!-- Haste Calculator -->
-      <a href="/haste" class="tool-card">
-        <div class="tool-icon">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
-        </div>
-        <div class="tool-body">
-          <div class="tool-name">Haste Calculator</div>
-          <div class="tool-desc">Find your effective haste and see exactly which DoT breakpoints you're hitting</div>
-          <div class="tool-go">Calculate <span>&rarr;</span></div>
-        </div>
-      </a>
-
-      <!-- Addons & WAs -->
-      <a href="/addons" class="tool-card">
-        <div class="tool-icon">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>
-        </div>
-        <div class="tool-body">
-          <div class="tool-name">Addons &amp; WeakAuras</div>
-          <div class="tool-desc">Download the same UI setup, Plater &amp; SUF profiles, and WeakAuras used by skimmy</div>
-          <div class="tool-go">Browse <span>&rarr;</span></div>
-        </div>
-      </a>
-
     </div>
   </section>
 
