--- a/123.html
+++ b/123.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <meta name="description" content="Shadow Priest Hub for MoP Classic. Rankings, haste calculator, boss tips, addons & WeakAuras.">
+  <meta name="description" content="Shadow Priest Hub for MoP Classic — rankings, haste calculator, boss tips, addons & WeakAuras by skimmynz.">
   <meta name="keywords" content="shadow priest, MoP Classic, guide, rankings, haste calculator, World of Warcraft, skimmynz">
 
   <title>Shadow Priest MoP Classic | skimmynz</title>
@@ -33,7 +33,7 @@
 <body>
 
   <!-- ════════════════════════════════════════════════════
-       Navigation
+       Navigation  (shared across all pages via nav.js)
        ════════════════════════════════════════════════════ -->
   <nav class="top-nav">
     <div class="nav-container">
@@ -52,7 +52,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o">
+          <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o" target="_blank" rel="noopener">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
             Guide
           </a>
@@ -89,10 +89,23 @@
        Zone 1 — Hero
        ════════════════════════════════════════════════════ -->
   <section class="hero">
-    <!-- Ambient void orbs -->
+
+    <!-- Background: use img, or swap to <video> for a looping clip
+         <video autoplay muted loop playsinline src="img/hero-loop.mp4"></video>
+    -->
+    <div class="hero-bg" aria-hidden="true">
+      <img src="img/hero-bg.jpg"
+           alt=""
+           loading="eager"
+           fetchpriority="high" />
+    </div>
+
+    <!-- Darkening overlay + central glow -->
+    <div class="hero-overlay" aria-hidden="true"></div>
+
+    <!-- Subtle void orbs (reduced from 3 to 2, lower opacity with bg image) -->
     <div class="hero-glow hero-glow--1" aria-hidden="true"></div>
     <div class="hero-glow hero-glow--2" aria-hidden="true"></div>
-    <div class="hero-glow hero-glow--3" aria-hidden="true"></div>
 
     <div class="hero-content">
       <h1 class="hero-title">Shadow Priest</h1>
@@ -136,10 +149,61 @@
   </section>
 
   <!-- ════════════════════════════════════════════════════
+       Zone 2 — Quick-Access Tool Cards
+       ════════════════════════════════════════════════════ -->
+  <section class="home-section">
+    <div class="section-header">
+      <h2 class="section-title">Tools</h2>
+      <p class="section-subtitle">Everything you need to optimise your Shadow Priest</p>
+    </div>
+    <div class="tools-grid">
+
+      <a href="/rankings.html" class="tool-card">
+        <div class="tool-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="17 11 19 13 23 9"/><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/></svg>
+        </div>
+        <div class="tool-body">
+          <div class="tool-name">Rankings</div>
+          <div class="tool-desc">Top 100 Shadow Priest DPS parses per boss with talent &amp; gear breakdowns</div>
+          <div class="tool-go">Explore <span>&rarr;</span></div>
+        </div>
+      </a>
+
+      <a href="/haste" class="tool-card">
+        <div class="tool-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+        </div>
+        <div class="tool-body">
+          <div class="tool-name">Haste Calculator</div>
+          <div class="tool-desc">Find your effective haste and see exactly which DoT breakpoints you're hitting</div>
+          <div class="tool-go">Calculate <span>&rarr;</span></div>
+        </div>
+      </a>
+
+      <a href="/addons" class="tool-card">
+        <div class="tool-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>
+        </div>
+        <div class="tool-body">
+          <div class="tool-name">Addons &amp; WeakAuras</div>
+          <div class="tool-desc">Download the same UI setup, Plater &amp; SUF profiles, and WeakAuras used by skimmy</div>
+          <div class="tool-go">Browse <span>&rarr;</span></div>
+        </div>
+      </a>
+
+    </div>
+  </section>
+
+  <hr class="section-divider" />
+
+  <!-- ════════════════════════════════════════════════════
        Zone 3 — Live / Featured Content
        ════════════════════════════════════════════════════ -->
   <section class="home-section">
-    <h2 class="section-title">Watch</h2>
+    <div class="section-header">
+      <h2 class="section-title">Watch</h2>
+      <p class="section-subtitle">Live streams &amp; featured kills</p>
+    </div>
     <div class="streams-grid">
 
       <!-- Twitch -->
@@ -151,7 +215,7 @@
         <div class="stream-embed" data-src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com&parent=www.skimmynz.com" data-title="skimmynz Twitch stream">
           <div class="stream-placeholder">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg>
-            Loading stream…
+            Loading stream&hellip;
           </div>
         </div>
       </div>
@@ -165,7 +229,7 @@
         <div class="stream-embed" data-src="https://www.youtube.com/embed/NaYavDBjAqo?autoplay=1&mute=1" data-title="RANK 1 SHADOW PRIEST — MEGAERA 25M HEROIC">
           <div class="stream-placeholder">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><polygon points="5 3 19 12 5 21 5 3"/></svg>
-            Loading video…
+            Loading video&hellip;
           </div>
         </div>
       </div>
@@ -173,12 +237,17 @@
     </div>
   </section>
 
+  <hr class="section-divider" />
+
   <!-- ════════════════════════════════════════════════════
        Zone 4 — Throne of Thunder Boss Tips
        ════════════════════════════════════════════════════ -->
   <section class="tips-section">
-    <h2 class="section-title">Throne of Thunder — Boss Tips</h2>
-    <div id="bossTabs" class="boss-tabs"></div>
+    <div class="section-header">
+      <h2 class="section-title">Throne of Thunder — Boss Tips</h2>
+      <p class="section-subtitle">Quick reference for every encounter</p>
+    </div>
+    <div id="bossTabs" class="boss-wings"></div>
     <div id="tipsContent" class="tips-panel"></div>
   </section>
 
